--- a/src/app/payment/offline-payment-proxy/offline-payment-proxy.component.html
+++ b/src/app/payment/offline-payment-proxy/offline-payment-proxy.component.html
@@ -1,6 +1,7 @@
 <div *ngIf="matchProxyAndMethod" class="row wMarginBottom wMarginTop">
     <div class="col-12">
-        <div class="text-muted">{{'reservation-page.offline.description'|translate: {'0': parameters? parameters['delayForOfflinePayment'] : '-'} }}</div>
+        <div class="text-muted" *ngIf="!deferred">{{'reservation-page.offline.description'|translate: {'0': parameters? parameters['delayForOfflinePayment'] : '-'} }}</div>
+        <div class="text-muted" *ngIf="deferred" translate="reservation-page.offline.deferred.description"></div>
     </div>
     <div class="col-12 wMarginTop" *ngIf="parameters && parameters.captchaRequestedForOffline && parameters.recaptchaApiKey">
         <app-recaptcha [apiKey]="parameters.recaptchaApiKey" (recaptchaResponse)="handleRecaptchaResponse($event)"></app-recaptcha>
