--- a/src/app/reservation/offline-payment/offline-payment.component.html
+++ b/src/app/reservation/offline-payment/offline-payment.component.html
@@ -1,14 +1,19 @@
 <app-reservation>
 
-<div class="wMarginBottom wMarginTop center-block" *ngIf="event && reservationInfo">
+<div class="wMarginBottom mt-2 center-block" *ngIf="event && reservationInfo">
 
-  <div class="alert alert-warning wMarginTop wMarginBottom">
+  <div class="alert alert-warning mt-2 mb-2 text-center">
     <h2><fa-icon [icon]="['fas', 'exclamation-triangle']"></fa-icon>{{' '}}<span [innerHTML]="'reservation-page-waiting.title' | translate: {'0': reservationInfo.formattedExpirationDate[translate.currentLang]}"></span></h2>
   </div>
 
+  <div class="page-header">
+    <h2 translate="reservation-page.title"></h2>
+  </div>
+  <app-summary-table [event]="event" [reservationInfo]="reservationInfo"></app-summary-table>
 
-  <h4 [innerHTML]="'reservation-page-waiting.required-steps'|translate"></h4>
-  <ol>
+
+  <h4 [innerHTML]="'reservation-page-waiting.required-steps'|translate" class="mt-5"></h4>
+  <ol class="mt-3">
       <li *ngIf="event.bankAccountOwner.length > 0">
           <p class="no-margin-bottom" [innerHTML]="'reservation-page-waiting.required-steps.1.with-bank-account-owner' | translate: {'0': event.currency+' '+reservationInfo.orderSummary.totalPrice, '1': event.bankAccount}"></p>
           <p class="bank-account-owner-info" *ngFor="let ownerLine of event.bankAccountOwner">{{ownerLine}}</p>
@@ -22,18 +27,19 @@
   </ol>
 
 
-  <div class="text-center wMarginTop">
+  <div class="text-center mt-5">
     <h4 [innerHTML]="'reservation-page-waiting.questions' | translate: {'0': event.organizationEmail, '1': reservationInfo.id}"></h4>
   </div>
 
-  <div class="row d-flex justify-content-between wMarginTop mobile-add-margin-bottom mt-4">
+  <div class="text-center text-muted mt-5">{{'reservation-page-complete.order-information' | translate: {'0': reservationId, '1': reservationInfo.firstName + ' ' + reservationInfo.lastName} }}</div>
+  <hr>
+  <div class="row d-flex justify-content-between mobile-add-margin-bottom">
       <div class="col-md-5 col-12 order-md-1" *ngIf="event.invoicingConfiguration.userCanDownloadReceiptOrInvoice && reservationInfo.invoiceNumber !== null">
           <a [href]="'/api/v2/public/event/' + event.shortName + '/reservation/' + reservationInfo.id + '/invoice'" class="btn btn-success block-button" target="_blank" translate="reservation-page-complete.download-your-invoice"></a>
       </div>
       <div class="col-md-5 col-12 order-md-1 text-center" *ngIf="!event.invoicingConfiguration.userCanDownloadReceiptOrInvoice"><p translate="reservation-page-waiting.invoice-will-be-sent"></p></div>
       <div class="col-md-5 col-12 order-md-0"><a [href]="event.websiteUrl" class="btn btn-light block-button" translate="to-event-site"></a></div>
   </div>
-  <div class="text-center wMarginTop30px">{{'reservation-page-complete.order-information' | translate: {'0': reservationId, '1': reservationInfo.firstName + ' ' + reservationInfo.lastName} }}</div>
 </div>
 
 </app-reservation>
