--- a/src/app/reservation/success/success.component.html
+++ b/src/app/reservation/success/success.component.html
@@ -46,8 +46,8 @@
     <div class="card mt-4" *ngFor="let ticket of tc.tickets" [ngClass]="{'border-left-warning': !ticket.assigned, 'shadow': ticketsFormShow[ticket.uuid], 'border-left-success': ticket.assigned && !ticketsFormShow[ticket.uuid]}">
       <div class="card-body">
         <div class="attendees-data d-md-flex w-100 justify-content-between">
-          <h3 class="card-title"><fa-icon [icon]="['fas', ticket.assigned ? 'check' : 'exclamation-triangle']" size="xs" [classes]="[ ticket.assigned ? 'text-success' : 'text-warning', 'd-none', 'd-md-inline']"></fa-icon> {{'reservation-page-complete.ticket-nr' | translate}}<span class="ticket-counter"></span> <small class="ml-2 text-muted">- {{tc.name}}</small></h3>
-          <h3 class="card-title" *ngIf="ticket.assigned">{{ticket.fullName}}</h3>
+          <h3 class="card-title flex-md-shrink-1"><fa-icon [icon]="['fas', ticket.assigned ? 'check' : 'exclamation-triangle']" size="xs" [classes]="[ ticket.assigned ? 'text-success' : 'text-warning', 'd-none', 'd-md-inline']"></fa-icon> {{'reservation-page-complete.ticket-nr' | translate}}<span class="ticket-counter"></span> <small class="ml-2 text-muted">- {{tc.name}}</small></h3>
+          <h3 class="card-title flex-md-shrink-0" *ngIf="ticket.assigned">{{ticket.fullName}}</h3>
           <h3 class="card-title text-muted" *ngIf="!ticket.assigned">{{'reservation-page-complete.ticket-not-assigned' | translate }}</h3>
         </div>
         <hr *ngIf="!ticketFormVisible">
@@ -79,7 +79,7 @@
                 <div class="col-md-5 order-md-1 col-12">
                   <button type="submit" class="btn btn-success btn-block">{{ (ticket.assigned ? 'reservation-page-complete.update' : 'reservation-page-complete.assign') | translate}}</button>
                 </div>
-                <div class="col-md-5 order-md-0 col-12">
+                <div class="col-md-5 mt-2 mt-md-0 order-md-0 col-12">
                   <button type="button" (click)="hideTicketForm(ticket.uuid)" translate="reservation-page-complete.cancel" class="btn btn-light btn-block"></button>
                 </div>
               </div>
@@ -95,20 +95,20 @@
     </div>
   </div>
 
-  <div class="row d-flex justify-content-between mt-5" *ngIf="!ticketFormVisible">
-    <div class="col-md-5 order-md-1 col-12 mb-2">
-      <a class="block-button btn btn-success" [routerLink]="['/event', event.shortName]" translate="buy-other-tickets"></a>
+  <div *ngIf="!ticketFormVisible" class="mt-5">
+    <hr>
+    <div class="row d-flex justify-content-between">
+      <div class="col-md-5 order-md-1 col-12 mb-2">
+        <a class="block-button btn btn-success" [routerLink]="['/event', event.shortName]" translate="buy-other-tickets"></a>
+      </div>
+      <div class="col-md-5 order-md-0 col-12 mt-2 mt-md-0 mb-2">
+        <a class="block-button btn btn-light" [attr.href]="event.websiteUrl" translate="to-event-site"></a>
+      </div>
     </div>
-    <div class="col-md-5 order-md-0 col-12 mt-2 mt-md-0 mb-2">
-      <a class="block-button btn btn-light" [attr.href]="event.websiteUrl" translate="to-event-site"></a>
+    <div class="text-center text-muted mt-3">{{'reservation-page-complete.order-information' | translate: {'0': reservationId, '1': reservationInfo.firstName + ' ' + reservationInfo.lastName} }}</div>
+    <div class="text-center mt-1">
+      <a href="https://alf.io" [attr.title]="'alfio.credits' | translate" target="_blank" rel="noreferrer noopener" translate="alfio.credits"></a>
     </div>
-  </div>
-
-  <div class="text-center wMarginTop30px">
-      {{'reservation-page-complete.order-information' | translate: {'0': reservationId, '1': reservationInfo.firstName + ' ' + reservationInfo.lastName} }}
-  </div>
-  <div class="text-center wMarginTop30px">
-      <span class="text-muted"><a href="https://alf.io" [attr.title]="'alfio.credits' | translate" target="_blank" rel="noreferrer noopener" translate="alfio.credits"></a></span>
   </div>
 </div>
 
