--- a/src/app/reservation/overview/overview.component.html
+++ b/src/app/reservation/overview/overview.component.html
@@ -71,6 +71,9 @@
             <label class="btn btn-outline-dark" [ngClass]="{'active': overviewForm.value.selectedPaymentMethod === 'ON_SITE'}" *ngIf="reservationInfo.activePaymentMethods['ON_SITE']">
               <input type="radio" formControlName="selectedPaymentMethod" [value]="'ON_SITE'"><fa-icon [icon]="['fas', 'money-bill']"  size="sm"></fa-icon> {{'reservation-page.on-site'|translate}}
             </label>
+            <label class="btn btn-outline-dark" [ngClass]="{'active': overviewForm.value.selectedPaymentMethod === 'IDEAL'}" *ngIf="reservationInfo.activePaymentMethods['IDEAL']">
+              <input type="radio" formControlName="selectedPaymentMethod" [value]="'IDEAL'"><fa-icon [icon]="['fas', 'money-bill']"  size="sm"></fa-icon> {{'reservation-page.mollie'|translate}}
+            </label>
           </div>
       </div>
       <div *ngIf="paymentMethodsCount() === 1">
@@ -86,6 +89,9 @@
             </span>
             <span *ngSwitchCase="'ON_SITE'">
                 <fa-icon [icon]="['fas', 'money-bill']"></fa-icon> {{'reservation-page.on-site'|translate}}
+            </span>
+            <span *ngSwitchCase="'IDEAL'">
+              <fa-icon [icon]="['fas', 'money-bill']"></fa-icon> {{'reservation-page.mollie'|translate}}
             </span>
           </h4>
       </div>
@@ -119,6 +125,11 @@
             [reservation]="reservationInfo"
             (paymentProvider)="registerCurrentPaymentProvider($event)">
           </app-paypal-payment-proxy>
+          <app-mollie-payment-proxy
+            [proxy]="overviewForm.value.paymentMethod"
+            [method]="overviewForm.value.selectedPaymentMethod"
+            (paymentProvider)="registerCurrentPaymentProvider($event)">
+          </app-mollie-payment-proxy>
       </div>
     </div>
 
