--- a/src/app/payment/mollie-payment-proxy/mollie-payment-proxy.component.html
+++ b/src/app/payment/mollie-payment-proxy/mollie-payment-proxy.component.html
@@ -1,3 +1,10 @@
 <div *ngIf="matchProxyAndMethod" class="row mt-2 mb-2">
-    <h3>blablabla ciao ciao</h3>
+    <div class="col-12">
+        <a href="https://mollie.com" target="_blank" norefrel="noreferrer noopener">
+            <img src="assets/img/payment/mollie-badge.png" class="img-responsive">
+        </a>
+    </div>
+    <div class="col-12">
+        <div class="text-muted" translate="reservation-page.payment.mollie.description"></div>
+    </div>
 </div>
