--- a/src/app/reservation/payment-method-selector/payment-method-selector.component.html
+++ b/src/app/reservation/payment-method-selector/payment-method-selector.component.html
@@ -3,51 +3,52 @@
 <div *ngIf="activePaymentsCount > 1" class="row">
     <div class="col-12" [class.col-md-5]="verticalLayout" [formGroup]="overviewForm">
         <div *ngIf="verticalLayout" class="mb-md-4">
-            <div *ngFor="let method of activePaymentMethods | keyvalue" class="custom-control custom-radio pt-3 pb-3" [ngClass]="{ 'font-weight-bold border-top border-bottom': overviewForm.value.selectedPaymentMethod == method.key, 'text-muted': overviewForm.value.selectedPaymentMethod != null && overviewForm.value.selectedPaymentMethod != method.key }">
+            <div *ngFor="let method of activePaymentMethods | keyvalue" class="custom-control custom-radio pt-3 pb-3" 
+                [ngClass]="{ 'font-weight-bold border-top border-bottom': selectedPaymentMethod == method.key, 'text-muted border-right-md': selectedPaymentMethod != null && selectedPaymentMethod != method.key }">
                 <input class="custom-control-input" [attr.id]="method.key" type="radio" [value]="method.key" formControlName="selectedPaymentMethod">
                 <label class="custom-control-label w-100 h-100" [attr.for]="method.key"><fa-icon [icon]="getPaymentMethodDetails(method.key).icon" class="ml-2 mr-3"></fa-icon> {{ getPaymentMethodDetails(method.key).labelKey | translate }}</label>
             </div>
         </div>
         <div class="btn-group btn-group-toggle payment-method-selector mb-2 w-100" *ngIf="!verticalLayout">
-            <label class="btn btn-outline-dark" *ngFor="let method of activePaymentMethods | keyvalue" [class.active]="overviewForm.value.selectedPaymentMethod == method.key">
+            <label class="btn btn-outline-dark" *ngFor="let method of activePaymentMethods | keyvalue" [class.active]="selectedPaymentMethod == method.key">
                 <input type="radio" formControlName="selectedPaymentMethod" [value]="method.key">
                 <fa-icon [icon]="getPaymentMethodDetails(method.key).icon"></fa-icon> {{ getPaymentMethodDetails(method.key).labelKey | translate }}
             </label>
         </div>
     </div>
     <div class="col-12" [class.col-md-7]="verticalLayout">
-        <div *ngIf="overviewForm.value.selectedPaymentMethod" [ngClass]="{'h-100 d-flex flex-md-column justify-content-center': verticalLayout }">
+        <div *ngIf="selectedPaymentMethod" [ngClass]="{'h-100 d-flex flex-md-column justify-content-center': verticalLayout }">
             <app-offline-payment-proxy
-                [proxy]="overviewForm.value.paymentProxy"
-                [method]="overviewForm.value.selectedPaymentMethod"
-                [parameters]="activePaymentMethods[overviewForm.value.selectedPaymentMethod].parameters"
+                [proxy]="selectedPaymentProxy"
+                [method]="selectedPaymentMethod"
+                [parameters]="activePaymentMethods[selectedPaymentMethod].parameters"
                 [overviewForm]="overviewForm"
                 (paymentProvider)="registerCurrentPaymentProvider($event)">
             </app-offline-payment-proxy>
             <app-onsite-payment-proxy
-                [proxy]="overviewForm.value.paymentProxy"
-                [method]="overviewForm.value.selectedPaymentMethod"
-                [parameters]="activePaymentMethods[overviewForm.value.selectedPaymentMethod].parameters"
+                [proxy]="selectedPaymentProxy"
+                [method]="selectedPaymentMethod"
+                [parameters]="activePaymentMethods[selectedPaymentMethod].parameters"
                 [overviewForm]="overviewForm"
                 (paymentProvider)="registerCurrentPaymentProvider($event)">
             </app-onsite-payment-proxy>
             <app-stripe-payment-proxy
                 [event]="event"
                 [reservation]="reservationInfo"
-                [proxy]="overviewForm.value.paymentProxy"
-                [method]="overviewForm.value.selectedPaymentMethod"
-                [parameters]="activePaymentMethods[overviewForm.value.selectedPaymentMethod].parameters"
+                [proxy]="selectedPaymentProxy"
+                [method]="selectedPaymentMethod"
+                [parameters]="activePaymentMethods[selectedPaymentMethod].parameters"
                 (paymentProvider)="registerCurrentPaymentProvider($event)">
             </app-stripe-payment-proxy>
             <app-paypal-payment-proxy
-                [proxy]="overviewForm.value.paymentProxy"
-                [method]="overviewForm.value.selectedPaymentMethod"
+                [proxy]="selectedPaymentProxy"
+                [method]="selectedPaymentMethod"
                 [reservation]="reservationInfo"
                 (paymentProvider)="registerCurrentPaymentProvider($event)">
             </app-paypal-payment-proxy>
             <app-mollie-payment-proxy
-                [proxy]="overviewForm.value.paymentProxy"
-                [method]="overviewForm.value.selectedPaymentMethod"
+                [proxy]="selectedPaymentProxy"
+                [method]="selectedPaymentMethod"
                 (paymentProvider)="registerCurrentPaymentProvider($event)">
             </app-mollie-payment-proxy>
         </div>
