--- a/src/app/payment/mollie-payment-proxy/mollie-payment-proxy.component.html
+++ b/src/app/payment/mollie-payment-proxy/mollie-payment-proxy.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="matchProxyAndMethod" class="row mt-2 mb-2">
-    <div class="col-12">
+    <div class="col-12 mb-3">
         <a href="https://mollie.com" target="_blank" norefrel="noreferrer noopener">
             <img src="assets/img/payment/mollie-badge.png" class="img-responsive">
         </a>
