--- a/src/app/reservation/offline-payment/offline-payment.component.html
+++ b/src/app/reservation/offline-payment/offline-payment.component.html
@@ -1,6 +1,6 @@
 <app-reservation>
 
-<div class="wMarginBottom mt-2 center-block" *ngIf="event && reservationInfo">
+<div class="mb-2 mt-2 center-block" *ngIf="event && reservationInfo">
 
   <div class="alert alert-warning mt-2 mb-2 text-center">
     <h2><fa-icon [icon]="['fas', 'exclamation-triangle']"></fa-icon>{{' '}}<span [innerHTML]="'reservation-page-waiting.title' | translate: {'0': reservationInfo.formattedExpirationDate[translate.currentLang]}"></span></h2>
