--- a/src/app/payment/paypal-payment-proxy/paypal-payment-proxy.component.html
+++ b/src/app/payment/paypal-payment-proxy/paypal-payment-proxy.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="matchProxyAndMethod" class="row wMarginBottom wMarginTop">
+<div *ngIf="matchProxyAndMethod" class="row mb-2 mt-2">
   <div class="col-12">
       <div class="text-muted">
         <div translate="reservation-page.paypal.description"></div>
@@ -6,7 +6,7 @@
   </div>
 
   <div class="col-12"  *ngIf="reservation && reservation.tokenAcquired">
-    <div class="alert alert-success wMarginBottom wMarginTop">
+    <div class="alert alert-success mb-2 mt-2">
       <h3><fa-icon [icon]="['fas', 'check']"></fa-icon>{{' '}}<span translate="reservation-page.paypal.confirm"></span></h3>
     </div>
   </div>
