--- a/src/app/payment/stripe-payment-proxy/stripe-payment-proxy.component.html
+++ b/src/app/payment/stripe-payment-proxy/stripe-payment-proxy.component.html
@@ -1,6 +1,6 @@
-<div *ngIf="matchProxyAndMethod" class="row mt-3 mb-3">
+<div *ngIf="matchProxyAndMethod" class="row mb-3">
   <div *ngIf="useSCA" class="col-12">
-    <div class="wMarginTop row">
+    <div class="mt-2 row">
       <div class="col-12">
         <div class="form-group">
           <label for="card-name" class="control-label" translate="reservation-page.cardholder.name"></label>
@@ -15,7 +15,7 @@
           <div>
               <div id="card-element"></div>
           </div>
-          <div class="wMarginTop text-danger payment-errors hide" role="alert" id="card-errors">
+          <div class="mt-2 text-danger payment-errors hide" role="alert" id="card-errors">
             <strong id="error-message"></strong>
           </div>
         </div>
