--- a/src/app/view-ticket/view-ticket.component.html
+++ b/src/app/view-ticket/view-ticket.component.html
@@ -14,7 +14,7 @@
           </div>
       </div>
 
-      <div class="wMarginTop30px wMarginBottom30px">
+      <div class="mt-3 mb-3">
           <h2 translate="ticket.ticket"></h2>
           <dl class="row">
               <dt class="col-sm-3 align-right-mobile-aware" translate="ticket.holder"></dt>
@@ -29,7 +29,7 @@
       </div>
 
 
-      <div *ngIf="ticketInfo.deskPaymentRequired" class="text-center wMarginTop30px wMarginBottom30px">
+      <div *ngIf="ticketInfo.deskPaymentRequired" class="text-center mt-3 mb-3">
           <h3 translate="ticket.payment-required"></h3>
       </div>
 
