--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,8 +3,13 @@
 @import "./font.scss";
 
 $font-family-sans-serif: "Source Sans Pro", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !default;
+@import "~bootstrap/scss/functions";
+@import "~bootstrap/scss/variables";
+$custom-control-indicator-border-color: $gray-700;
+
 
 @import "~bootstrap/scss/bootstrap";
+
 
 @import "~@ng-select/ng-select/themes/default.theme.css";
 
@@ -100,18 +105,6 @@ body {
 
 .text-align-right {
     text-align: right;
-}
-
-.wMarginBottom {
-    margin-bottom: 20px;
-}
-
-.wMarginTop30px {
-    margin-top: 30px
-}
-
-.wMarginTop {
-    margin-top: 20px
 }
 
 .no-margin-bottom {
