add missing whitespace

--- a/src/app/event-display/event-display.component.html
+++ b/src/app/event-display/event-display.component.html
@@ -63,13 +63,13 @@
           <div class="custom-control custom-checkbox mt-2 wMarginBottom" *ngIf="event.privacyPolicyUrl">
               <input class="custom-control-input" id="privacyPolicyAccepted" type="checkbox" required name="privacyPolicyAccepted" formControlName="privacyPolicyAccepted" value="true" appInvalidFeedback [invalidFeedbackInLabel]="true">
               <label class="custom-control-label" for="privacyPolicyAccepted">
-                {{'reservation-page.privacy.prefix'|translate}}{{' '}}<a [href]="event.privacyPolicyUrl" target="_blank" translate="reservation-page.privacy.link.text"></a>{{'reservation-page.privacy.suffix'|translate}}
+                {{'reservation-page.privacy.prefix'|translate}}{{' '}}<a [href]="event.privacyPolicyUrl" target="_blank" translate="reservation-page.privacy.link.text"></a>{{' '}}{{'reservation-page.privacy.suffix'|translate}}
               </label>
           </div>
           <div class="custom-control custom-checkbox">
               <input class="custom-control-input" id="termsAndConditionsAccepted" type="checkbox" required name="termAndConditionsAccepted" formControlName="termAndConditionsAccepted" aria-required="true" appInvalidFeedback [invalidFeedbackInLabel]="true">
               <label class="custom-control-label" for="termsAndConditionsAccepted">
-                  {{'reservation-page.tc.prefix'|translate}}{{' '}}<a [href]="event.termsAndConditionsUrl" target="_blank" translate="reservation-page.tc.link.text"></a>{{'reservation-page.tc.suffix'|translate}}
+                  {{'reservation-page.tc.prefix'|translate}}{{' '}}<a [href]="event.termsAndConditionsUrl" target="_blank" translate="reservation-page.tc.link.text"></a>{{' '}}{{'reservation-page.tc.suffix'|translate}}
               </label>
           </div>
           <div class="row justify-content-end">
