--- a/src/app/reservation/overview/overview.component.html
+++ b/src/app/reservation/overview/overview.component.html
@@ -23,7 +23,7 @@
 
       <div class="col-12 col-md-4 invoice-details" *ngIf="!reservationInfo.orderSummary.free && event.invoicingConfiguration.invoiceAllowed">
         <div class="d-flex flex-column justify-content-center h-100">
-          <h5 class="d-none d-md-block" translate="reservation-page.invoice-details"></h5>
+          <div class="h5 d-none d-md-block" translate="reservation-page.invoice-details"></div>
           <div class="page-header d-block d-md-none"><h2 translate="reservation-page.invoice-details"></h2></div>
           <div class="row">
             <div class="col-12" *ngIf="reservationInfo.invoiceRequested">
@@ -42,7 +42,7 @@
               <div class="h-100 d-flex flex-column justify-content-center"><span translate="reservation-page.no-invoice-requested"></span></div>
             </div>
             <div class="col-5 col-md-12 mt-md-3">
-              <button type="button" class="btn btn-secondary" (click)="back(true)"><fa-icon [icon]="['far', 'edit']"></fa-icon>{{' '}}{{(reservationInfo.invoiceRequested ? 'common.edit' : 'reservation-page.request-invoice') | translate}}</button>
+              <button type="button" class="btn btn-secondary" (click)="back(true)"><fa-icon [icon]="['far', 'edit']" a11yRole="presentation"></fa-icon>{{' '}}{{(reservationInfo.invoiceRequested ? 'common.edit' : 'reservation-page.request-invoice') | translate}}</button>
             </div>
           </div>
         </div>
@@ -60,32 +60,32 @@
       <div *ngIf="paymentMethodsCount() > 1">
           <div class="btn-group btn-group-toggle payment-method-selector wMarginBottom">
             <label class="btn btn-outline-dark" [ngClass]="{'active': overviewForm.value.selectedPaymentMethod === 'CREDIT_CARD'}" *ngIf="reservationInfo.activePaymentMethods['CREDIT_CARD']">
-              <input type="radio" formControlName="selectedPaymentMethod" [value]="'CREDIT_CARD'"><fa-icon [icon]="['fas', 'credit-card']"></fa-icon> {{'reservation-page.credit-card'|translate}}
+              <input type="radio" role="radiogroup" [attr.aria-label]="'reservation-page.credit-card'|translate" formControlName="selectedPaymentMethod" [value]="'CREDIT_CARD'"><fa-icon [icon]="['fas', 'credit-card']" a11yRole="presentation"></fa-icon> {{'reservation-page.credit-card'|translate}}
             </label>
             <label class="btn btn-outline-dark" [ngClass]="{'active': overviewForm.value.selectedPaymentMethod === 'PAYPAL'}" *ngIf="reservationInfo.activePaymentMethods['PAYPAL']">
-              <input type="radio" formControlName="selectedPaymentMethod" [value]="'PAYPAL'"><fa-icon [icon]="['fab', 'paypal']"></fa-icon> {{'reservation-page.paypal'|translate}}
+              <input type="radio" role="radiogroup" [attr.aria-label]="'reservation-page.paypal'|translate" formControlName="selectedPaymentMethod" [value]="'PAYPAL'"><fa-icon [icon]="['fab', 'paypal']" a11yRole="presentation"></fa-icon> {{'reservation-page.paypal'|translate}}
             </label>
             <label class="btn btn-outline-dark" [ngClass]="{'active': overviewForm.value.selectedPaymentMethod === 'BANK_TRANSFER'}" *ngIf="reservationInfo.activePaymentMethods['BANK_TRANSFER']">
-              <input type="radio" formControlName="selectedPaymentMethod" [value]="'BANK_TRANSFER'"><fa-icon [icon]="['fas', 'exchange-alt']"></fa-icon> {{'reservation-page.offline'|translate}}
+              <input type="radio" role="radiogroup" [attr.aria-label]="'reservation-page.offline'|translate" formControlName="selectedPaymentMethod" [value]="'BANK_TRANSFER'"><fa-icon [icon]="['fas', 'exchange-alt']" a11yRole="presentation"></fa-icon> {{'reservation-page.offline'|translate}}
             </label>
             <label class="btn btn-outline-dark" [ngClass]="{'active': overviewForm.value.selectedPaymentMethod === 'ON_SITE'}" *ngIf="reservationInfo.activePaymentMethods['ON_SITE']">
-              <input type="radio" formControlName="selectedPaymentMethod" [value]="'ON_SITE'"><fa-icon [icon]="['fas', 'money-bill']"  size="sm"></fa-icon> {{'reservation-page.on-site'|translate}}
+              <input type="radio" role="radiogroup" [attr.aria-label]="'reservation-page.on-site'|translate" formControlName="selectedPaymentMethod" [value]="'ON_SITE'"><fa-icon [icon]="['fas', 'money-bill']"  size="sm" a11yRole="presentation"></fa-icon> {{'reservation-page.on-site'|translate}}
             </label>
           </div>
       </div>
       <div *ngIf="paymentMethodsCount() === 1">
           <h4 class="wMarginTop" [ngSwitch]="getSinglePaymentMethod()">
             <span *ngSwitchCase="'CREDIT_CARD'">
-              <fa-icon [icon]="['fas', 'credit-card']"></fa-icon> {{'reservation-page.credit-card'|translate}}
+              <fa-icon [icon]="['fas', 'credit-card']" a11yRole="presentation"></fa-icon> {{'reservation-page.credit-card'|translate}}
             </span>
             <span *ngSwitchCase="'PAYPAL'">
-                <fa-icon [icon]="['fab', 'paypal']"></fa-icon> {{'reservation-page.paypal'|translate}}
+                <fa-icon [icon]="['fab', 'paypal']" a11yRole="presentation"></fa-icon> {{'reservation-page.paypal'|translate}}
             </span>
             <span *ngSwitchCase="'BANK_TRANSFER'">
-                <fa-icon [icon]="['fas', 'exchange-alt']"></fa-icon> {{'reservation-page.offline'|translate}}
+                <fa-icon [icon]="['fas', 'exchange-alt']" a11yRole="presentation"></fa-icon> {{'reservation-page.offline'|translate}}
             </span>
             <span *ngSwitchCase="'ON_SITE'">
-                <fa-icon [icon]="['fas', 'money-bill']"></fa-icon> {{'reservation-page.on-site'|translate}}
+                <fa-icon [icon]="['fas', 'money-bill']" a11yRole="presentation"></fa-icon> {{'reservation-page.on-site'|translate}}
             </span>
           </h4>
       </div>
@@ -127,13 +127,13 @@
     </div>
 
     <div class="custom-control custom-checkbox" *ngIf="event.privacyPolicyUrl">
-        <input class="custom-control-input" id="privacyPolicyAccepted" formControlName="privacyPolicyAccepted" type="checkbox">{{' '}} <!-- ugly, see  https://github.com/angular/angular/issues/21049 -->
-        <label for="privacyPolicyAccepted" class="custom-control-label">
+        <input class="custom-control-input" role="group" aria-labelledby="privacy-policy-label" privacyPolicyAccepted" formControlName="privacyPolicyAccepted" type="checkbox">{{' '}} <!-- ugly, see  https://github.com/angular/angular/issues/21049 -->
+        <label for="privacyPolicyAccepted" class="custom-control-label" aria-required="true" id="privacy-policy-label">
           <span translate="reservation-page.privacy.prefix"></span>{{' '}}<a [attr.href]="event.privacyPolicyUrl" target="_blank" translate="reservation-page.privacy.link.text"></a>{{' '}}<span translate="reservation-page.privacy.suffix"></span>
         </label>
     </div>
-    <div class="custom-control custom-checkbox">
-        <input class="custom-control-input" id="termsAndConditionsAccepted" formControlName="termAndConditionsAccepted" type="checkbox">
+    <div class="custom-control custom-checkbox" id="terms-conditions-label">
+        <input class="custom-control-input" role="group" aria-required="true" aria-labelledby="terms-conditions-label" id="termsAndConditionsAccepted" formControlName="termAndConditionsAccepted" type="checkbox">
         <label class="custom-control-label" for="termsAndConditionsAccepted">
           {{' '}}<span translate="reservation-page.tc.prefix"></span>{{' '}}<a [attr.href]="event.termsAndConditionsUrl" target="_blank" translate="reservation-page.tc.link.text"></a>{{' '}}<span translate="reservation-page.tc.suffix"></span>
         </label>
