--- a/src/app/category-sale-period/item-sale-period.html
+++ b/src/app/category-sale-period/item-sale-period.html
@@ -1,5 +1,5 @@
 <!-- ticket category date handling -->
-<h6 class="card-subtitle text-muted" *ngIf="!item.expired && item.saleInFuture">{{'show-event.sales-not-started'|translate: {'0': item.formattedInception[currentLang]} }}</h6>
-<h6 class="card-subtitle text-muted" *ngIf="!item.expired && !item.saleInFuture">{{'show-event.sales-end'|translate: {'0': item.formattedExpiration[currentLang]} }}</h6>
-<h6 class="card-subtitle text-muted" *ngIf="item.expired">{{'show-event.sales-ended'|translate: {'0': item.formattedExpiration[currentLang]} }}</h6>
+<div class="h6 card-subtitle text-muted" *ngIf="!item.expired && item.saleInFuture">{{'show-event.sales-not-started'|translate: {'0': item.formattedInception[currentLang]} }}</div>
+<div class="h6 card-subtitle text-muted" *ngIf="!item.expired && !item.saleInFuture">{{'show-event.sales-end'|translate: {'0': item.formattedExpiration[currentLang]} }}</div>
+<div class="h6 card-subtitle text-muted" *ngIf="item.expired">{{'show-event.sales-ended'|translate: {'0': item.formattedExpiration[currentLang]} }}</div>
 <!-- -->
