--- a/src/app/reservation/booking/booking.component.html
+++ b/src/app/reservation/booking/booking.component.html
@@ -20,13 +20,13 @@
       <div class="col-12 col-sm-6">
         <div class="form-group">
           <label for="first-name">{{'common.first-name'|translate}}{{' '}}*</label>
-          <input id="first-name" class="form-control" formControlName="firstName" type="text" #contactFirstName autocomplete="fname" [attr.maxlength]="255" appInvalidFeedback (change)="handleAutocomplete('firstName', contactFirstName.value)">
+          <input id="first-name" class="form-control" formControlName="firstName" aria-required="true" type="text" #contactFirstName autocomplete="fname" [attr.maxlength]="255" appInvalidFeedback (change)="handleAutocomplete('firstName', contactFirstName.value)">
         </div>
       </div>
       <div class="col-12 col-sm-6">
         <div class="form-group">
           <label for="last-name">{{'common.last-name'|translate}}{{' '}}*</label>
-          <input id="last-name" class="form-control" formControlName="lastName" type="text" #contactLastName autocomplete="lname" [attr.maxlength]="255" appInvalidFeedback (change)="handleAutocomplete('lastName', contactLastName.value)">
+          <input id="last-name" class="form-control" formControlName="lastName" aria-required="true" type="text" #contactLastName autocomplete="lname" [attr.maxlength]="255" appInvalidFeedback (change)="handleAutocomplete('lastName', contactLastName.value)">
         </div>
       </div>
     </div>
@@ -34,7 +34,7 @@
       <div class="col-12">
         <div class="form-group">
             <label for="email">{{'common.email'|translate}}{{' '}}*</label>
-            <input id="email" class="form-control" formControlName="email" type="email" #contactLastEmail autocomplete="email" [attr.maxlength]="255" appInvalidFeedback (change)="handleAutocomplete('email', contactLastEmail.value)">
+            <input id="email" class="form-control" formControlName="email" aria-required="true" type="email" #contactLastEmail autocomplete="email" [attr.maxlength]="255" appInvalidFeedback (change)="handleAutocomplete('email', contactLastEmail.value)">
         </div>
       </div>
     </div>
@@ -70,7 +70,7 @@
           <div class="attendees-data card-body">
               <div class="d-flex w-100 justify-content-between">
                   <h3 class="card-title">
-                      <fa-icon [icon]="['fas', 'ticket-alt']" size="xs" [classes]="['rotate-45']"></fa-icon>
+                      <fa-icon [icon]="['fas', 'ticket-alt']" size="xs" [classes]="['rotate-45']" a11yRole="presentation"></fa-icon>
                       <span>{{' '}}{{'reservation-page-complete.ticket-nr' | translate}}<span class="ticket-counter"></span></span>
                   </h3>
                   <div class="h3" *ngIf="!enableAttendeeAutocomplete && firstCategory && firstTicket">
@@ -90,7 +90,7 @@
       </div>
     </ng-container>
 
-    <div class="mt-3 mb-3"><strong>*</strong>{{' '}}<span translate="common.required-fields"></span></div>
+    <div class="mt-3 mb-3" aria-hidden="true"><strong>*</strong>{{' '}}<span translate="common.required-fields"></span></div>
     <hr class="mt-5">
     <app-event-footer-links [event]="event"></app-event-footer-links>
 
