--- a/src/app/reservation/invoice-form/invoice-form.component.html
+++ b/src/app/reservation/invoice-form/invoice-form.component.html
@@ -8,14 +8,14 @@
   <div class="row">
     <div class="col-12">
       <div class="form-group">
-        <label translate="invoice.type"></label>
+        <label translate="invoice.type" id="invoiceTypeLabel"></label>
         <div>
           <div class="custom-control custom-radio custom-control-inline">
-              <input class="custom-control-input" type="radio" formControlName="addCompanyBillingDetails" [value]="false" id="invoiceTypePrivate" >
+              <input class="custom-control-input" type="radio" role="radiogroup" aria-labelledby="invoiceTypeLabel" formControlName="addCompanyBillingDetails" [value]="false" id="invoiceTypePrivate" >
               <label class="custom-control-label radio-inline" for="invoiceTypePrivate">{{' '}}{{'invoice.type.private' | translate}}</label>
           </div>
           <div class="custom-control custom-radio custom-control-inline">
-              <input class="custom-control-input" type="radio" formControlName="addCompanyBillingDetails" [value]="true" id="invoiceTypeBusiness">
+              <input class="custom-control-input" type="radio" role="radiogroup" aria-labelledby="invoiceTypeLabel" formControlName="addCompanyBillingDetails" [value]="true" id="invoiceTypeBusiness">
               <label class="custom-control-label radio-inline" for="invoiceTypeBusiness">{{' '}}{{'invoice.type.business' | translate}}</label>
           </div>
         </div>
@@ -36,7 +36,7 @@
       <div class="col-12">
           <div class="form-group">
               <label for="billingAddressLine1" class="control-label">{{'reservation-page.address-line-1' | translate}}{{' *'}}</label>
-              <input id="billingAddressLine1" formControlName="billingAddressLine1" class="form-control" type="text" required [attr.maxlength]="255" appInvalidFeedback>
+              <input id="billingAddressLine1" aria-required="true" formControlName="billingAddressLine1" class="form-control" type="text" required [attr.maxlength]="255" appInvalidFeedback>
           </div>
       </div>
   </div>
@@ -54,13 +54,13 @@
       <div class="col-12 col-md-3">
           <div class="form-group">
               <label for="billingAddressZip" class="control-label">{{'reservation-page.zip-postal-code' | translate}}{{' *'}}</label>
-              <input id="billingAddressZip" formControlName="billingAddressZip" class="form-control" type="text" required [attr.maxlength]="50" appInvalidFeedback>
+              <input id="billingAddressZip" aria-required="true" formControlName="billingAddressZip" class="form-control" type="text" required [attr.maxlength]="50" appInvalidFeedback>
           </div>
       </div>
       <div class="col-12 col-md-9">
           <div class="form-group">
               <label for="billingAddressCity" class="control-label">{{'reservation-page.city' | translate}}{{' *'}}</label>
-              <input id="billingAddressCity" formControlName="billingAddressCity" class="form-control" type="text" required  [attr.maxlength]="255" appInvalidFeedback>
+              <input id="billingAddressCity" aria-required="true" formControlName="billingAddressCity" class="form-control" type="text" required  [attr.maxlength]="255" appInvalidFeedback>
           </div>
       </div>
   </div>
@@ -68,11 +68,12 @@
   <div class="row">
       <div class="col-12" [ngClass]="{'col-md-6': customerReferenceEnabled && invoiceBusiness}">
           <div class="form-group">
-              <label for="vatCountry" class="control-label">{{'reservation-page-complete.country' | translate}}{{' *'}}</label>
-              <ng-select placeholder="{{'reservation-page.country.select'|translate}}" 
+              <label for="vatCountry" id="vatCountryLabel" class="control-label">{{'reservation-page-complete.country' | translate}}{{' *'}}</label>
+              <ng-select aria-required="true" placeholder="{{'reservation-page.country.select'|translate}}" 
                         [items]="countries" bindLabel="name" bindValue="isoCode" selectOnTab="true"
-                        formControlName="vatCountryCode" id="vatCountry" class="form-control field-required" 
-                        [searchFn]="searchCountry" required appInvalidFeedback>
+                        formControlName="vatCountryCode" class="form-control field-required" 
+                        [searchFn]="searchCountry" required appInvalidFeedback
+                        labelForId="vatCountry" aria-labelledby="vatCountryLabel">
                   <ng-template ng-option-tmp let-item="item">{{item.name}} ({{item.isoCode}})</ng-template>
                   <ng-template ng-label-tmp let-item="item">{{item.name}} ({{item.isoCode}})</ng-template>
                   <ng-template ng-notfound-tmp let-searchTerm="searchTerm"></ng-template>
@@ -94,7 +95,7 @@
             <label for="vatNr">{{'invoice.vat' |translate: {'0': ('common.vat' | translate)} }}<span *ngIf="taxIdIsRequired"> *</span></label>
             <div class="input-group">
                 <div class="input-group-prepend" *ngIf="form.value.vatCountryCode"><span class="input-group-text">{{form.value.vatCountryCode}}</span></div>
-                <input id="vatNr" type="text" formControlName="vatNr" class="form-control" appInvalidFeedback>
+                <input id="vatNr" type="text" formControlName="vatNr" class="form-control" appInvalidFeedback [attr.aria-required]="taxIdIsRequired">
             </div>
         </div>
     </div>
@@ -114,7 +115,7 @@
       <div class="col-12">
           <div class="form-group">
               <label for="italyEInvoicingFiscalCode">{{'invoice-fields.fiscalCode'|translate}}{{' *'}}</label>
-              <input id="italyEInvoicingFiscalCode" type="text" formControlName="italyEInvoicingFiscalCode" class="form-control" appInvalidFeedback>
+              <input id="italyEInvoicingFiscalCode" required aria-required="true" type="text" formControlName="italyEInvoicingFiscalCode" class="form-control" appInvalidFeedback>
           </div>
       </div>
     </div>
@@ -122,7 +123,7 @@
       <div class="col-12 col-md-6">
         <div class="form-group">
           <label for="italyEInvoicingReferenceType">{{'invoice-fields.addresseeItalyEInvoice' | translate}}{{' *'}}</label>
-          <select class="custom-select" id="italyEInvoicingReferenceType" required formControlName="italyEInvoicingReferenceType">
+          <select class="custom-select" id="italyEInvoicingReferenceType" required aria-required="true" formControlName="italyEInvoicingReferenceType">
             <option value="ADDRESSEE_CODE" translate="invoice-fields.addressee-code"></option>
             <option value="PEC" translate="invoice-fields.pec"></option>
             <option value="NONE" translate="invoice.fields.neither"></option>
@@ -132,11 +133,11 @@
       <div class="col-12 col-md-6" *ngIf="addresseeCodeSelected || pecSelected">
         <div class="form-group" *ngIf="addresseeCodeSelected">
           <label for="italyEInvoicingReferenceAddresseeCode">{{'invoice-fields.addressee-code'|translate}}{{' *'}}</label>
-          <input id="italyEInvoicingReferenceAddresseeCode" required type="text" [attr.maxlength]="7" class="form-control" formControlName="italyEInvoicingReferenceAddresseeCode" appInvalidFeedback>
+          <input id="italyEInvoicingReferenceAddresseeCode" required aria-required="true" type="text" [attr.maxlength]="7" class="form-control" formControlName="italyEInvoicingReferenceAddresseeCode" appInvalidFeedback>
         </div>
         <div class="form-group" *ngIf="pecSelected">
           <label for="italyEInvoicingReferencePEC">{{'invoice-fields.pec' | translate}}{{' *'}}</label>
-          <input id="italyEInvoicingReferencePEC" type="email" class="form-control" formControlName="italyEInvoicingReferencePEC" appInvalidFeedback>
+          <input id="italyEInvoicingReferencePEC" type="email" required aria-required="true" class="form-control" formControlName="italyEInvoicingReferencePEC" appInvalidFeedback>
         </div>
       </div>
     </div>
